--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE htmal>
-<htmal lang="en">
+<html lang="en">
 <head>
 	<meta charset="UTF-8"><
-	<title>Hello World!</title> 
+	<title>Queso</title> 
 </head>
 <body>
-	<h1>Bienvenidos!</h1>h1>
+	<h1>Quesuave parino</h1>
 </body>
 </head>
 </html>			
