--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE htmal>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8"><
 	<title>Queso</title> 
 </head>
 <body>
-	<h1>Quesuave parino</h1>
+	<h1>Quesuave padrino</h1>
 </body>
 </head>
 </html>			
