--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>This is my mfkin website...</h1>
-								<p>This is a demo for my favorite group at<a href="https://html5up.net">CENTRO</a> and created<br />
+								<p>This is a demo for my favorite group at<a href="http://centro.edu.mx">CENTRO</a> and created<br />
 								using a <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
