--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 								<li><a href="#work">PIOLIN</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
