--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>This is my mfkin website...</h1>
-								<p>This is a demo for my favorite group at<a href="http://centro.edu.mx">CENTRO</a> and created<br />
-								using a <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>This is the shit</h1>
+								<p>New phone who dis?<a href="http://centro.edu.mx">:)</a> Iliketurtles<br />
+								 <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
 						<nav>
