--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">PIOLIN</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">Hola</a></li>
+								<li><a href="#work">Adiós</a></li>
+								<li><a href="#about">Hola de nuevo</a></li>
+								<li><a href="#contact">Adiós definitivo</a></li>
+								<li><a href="#contact">TQM</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
